doc:
Update project documentation